# Qt

BatteryLevel/: BatteryWidget.qml  CMakeLists.txt  Main.qml  battery.cpp  main.cpp
Brian/: .gitignore  BatteryWidget.qml  CMakeLists.txt  battery.h  main.cpp
Brian/qml/: Main.qml
